workshop04/t.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    sidecar.istio.io/status: '{"version":"d36ff46d2def0caba37f639f09514b17c4e80078f749a46aae84439790d2b560","initContainers":["istio-init"],"containers":["istio-proxy"],"volumes":["istio-envoy","istio-data","istio-podinfo","istio-token","istiod-ca-cert"],"imagePullSecrets":null}'
  creationTimestamp: "2020-05-22T06:17:54Z"
  generateName: fortune-deploy-779b4cf74-
  labels:
    app: fortune-pod
    dept: engineering
    istio.io/rev: default
    pod-template-hash: 779b4cf74
    security.istio.io/tlsMode: istio
    service.istio.io/canonical-name: fortune-pod
    service.istio.io/canonical-revision: latest
  name: fortune-deploy-779b4cf74-bf8rw
  namespace: default
  ownerReferences:
  - apiVersion: apps/v1
    blockOwnerDeletion: true
    controller: true
    kind: ReplicaSet
    name: fortune-deploy-779b4cf74
    uid: 53f6b4f5-4359-42c4-a701-16f6aa306d93
  resourceVersion: "247709"
  selfLink: /api/v1/namespaces/default/pods/fortune-deploy-779b4cf74-bf8rw
  uid: eab380b2-7dab-49df-8e35-a237eb4dfedb
spec:
#the app
  containers:
  - image: chukmunnlee/fortune:v1
    imagePullPolicy: IfNotPresent
    name: fortune-container
    ports:
    - containerPort: 3000
      name: http-port
      protocol: TCP
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: default-token-vxpj4
      readOnly: true
#sidecar
  - args:
    - proxy
    - sidecar
    - --domain
    - $(POD_NAMESPACE).svc.cluster.local
    - --serviceCluster
    - fortune-pod.$(POD_NAMESPACE)
    - --proxyLogLevel=warning
    - --proxyComponentLogLevel=misc:error
    - --trust-domain=cluster.local
    - --concurrency
    - "2"
    image: docker.io/istio/proxyv2:1.6.0-rc.2
    imagePullPolicy: Always
    name: istio-proxy
    ports:
    - containerPort: 15090
      name: http-envoy-prom
      protocol: TCP
    readinessProbe:
      failureThreshold: 30
      httpGet:
        path: /healthz/ready
        port: 15021
        scheme: HTTP
      initialDelaySeconds: 1
      periodSeconds: 2
      successThreshold: 1
      timeoutSeconds: 1
    resources:
      limits:
        cpu: "2"
        memory: 1Gi
      requests:
        cpu: 10m
        memory: 40Mi
    securityContext:
      allowPrivilegeEscalation: false
      capabilities:
        drop:
        - ALL
      privileged: false
      readOnlyRootFilesystem: true
      runAsGroup: 1337
      runAsNonRoot: true
      runAsUser: 1337
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/istio
      name: istiod-ca-cert
    - mountPath: /var/lib/istio/data
      name: istio-data
    - mountPath: /etc/istio/proxy
      name: istio-envoy
    - mountPath: /var/run/secrets/tokens
      name: istio-token
    - mountPath: /etc/istio/pod
      name: istio-podinfo
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: default-token-vxpj4
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: pool-1u4b19q0m-3cku0
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext:
    fsGroup: 1337
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: default-token-vxpj4
    secret:
      defaultMode: 420
      secretName: default-token-vxpj4
  - emptyDir:
      medium: Memory
    name: istio-envoy
  - emptyDir: {}
    name: istio-data
  - downwardAPI:
      defaultMode: 420
      items:
      - fieldRef:
          apiVersion: v1
          fieldPath: metadata.labels
        path: labels
      - fieldRef:
          apiVersion: v1
          fieldPath: metadata.annotations
        path: annotations
    name: istio-podinfo
  - name: istio-token
    projected:
      defaultMode: 420
      sources:
      - serviceAccountToken:
          audience: istio-ca
          expirationSeconds: 43200
          path: istio-token
  - configMap:
      defaultMode: 420
      name: istio-ca-root-cert
    name: istiod-ca-cert
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2020-05-22T06:18:01Z"
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2020-05-22T06:18:14Z"
    status: "True"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2020-05-22T06:18:14Z"
    status: "True"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2020-05-22T06:17:54Z"
    status: "True"
    type: PodScheduled
  containerStatuses:
  - containerID: docker://557535dbb904809035be3456208987c76236c29e4ffddb79a1623b0590a3443d
    image: chukmunnlee/fortune:v1
    imageID: docker-pullable://chukmunnlee/fortune@sha256:b69de0945086617cd8f1e33a7309f9b67e7a8466830996832363993c3873cc3d
    lastState: {}
    name: fortune-container
    ready: true
    restartCount: 0
    started: true
    state:
      running:
        startedAt: "2020-05-22T06:18:09Z"
  - containerID: docker://6115c21845360a27c8f3291dd63d370a7a1471e0e6467f57e6d21af99a16184d
    image: istio/proxyv2:1.6.0-rc.2
    imageID: docker-pullable://istio/proxyv2@sha256:d61b8b1071d801403687d92d5e07e81d7d9573a240244bae95385c7fecf0f3e3
    lastState: {}
    name: istio-proxy
    ready: true
    restartCount: 0
    started: true
    state:
      running:
        startedAt: "2020-05-22T06:18:12Z"
  hostIP: 10.104.0.4
  initContainerStatuses:
  - containerID: docker://5e255b1323a8ce781a1e9d5a584cd55415d55288f7770156f9683b371884b2b8
    image: istio/proxyv2:1.6.0-rc.2
    imageID: docker-pullable://istio/proxyv2@sha256:d61b8b1071d801403687d92d5e07e81d7d9573a240244bae95385c7fecf0f3e3
    lastState: {}
    name: istio-init
    ready: true
    restartCount: 0
    state:
      terminated:
        containerID: docker://5e255b1323a8ce781a1e9d5a584cd55415d55288f7770156f9683b371884b2b8
        exitCode: 0
        finishedAt: "2020-05-22T06:18:00Z"
        reason: Completed
        startedAt: "2020-05-22T06:18:00Z"
  phase: Running
  podIP: 10.244.0.30
  podIPs:
  - ip: 10.244.0.30
  qosClass: Burstable
  startTime: "2020-05-22T06:17:54Z"
