workshop04/nwapp.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nwapp-deploy
  labels:
    app: northwind
spec:
  replicas: 3
  #chukmunnlee/nwapp:v1
  #use the info from Config Map and secret for DB_PASSWORD  
  selector:
    matchLabels:
      app: nwapp-pod    
  template:
    # pod template yaml
    metadata: 
      name: nwapp-pod
      labels:
        app: nwapp-pod
    spec:
      containers:
        - name: nwapp-container
          image: chukmunnlee/nwapp:v1
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 100m
          ports:
          - name: nwapp-port
            containerPort: 3000
            
          livenessProbe:
            initialDelaySeconds: 5
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
            httpGet:
              #HOST default to localhost, no need to set
              path: /health
              port: nwapp-port
---
apiVersion: v1
kind: Service
metadata:
  name: nwapp-svc
  labels: 
    app: northwind
spec:
  type: ClusterIP
  selector:
    app: nwapp-pod
  ports:
  - name: app-port
    port: 8080
    targetPort: nwapp-port
# ---
# apiVersion: networking.k8s.io/v1beta1
# kind: Ingress
# metadata:
#   name: nwapp-ing
#   labels:
#     app: northwind
#   annotations:
#     kubernetes.io/ingress.class: "nginx"
# spec:
#   rules:
#   - host: "nwapp.104.248.99.27.nip.io"
#     http:
#       paths:
#       - path: /
#         backend:
#           serviceName: nwapp-svc # name of the service in same namespace
#           servicePort: app-port
