workshop04/nwapp-ing.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nwapp-ing
  labels:
    app: northwind
  annotations:  
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/limit-rpm: "15"
spec:
  rules:
  - host: "v1.nwapp.104.248.99.27.nip.io"
    http:
      paths:
      - path: /
        backend:
          serviceName: nwapp-svc # name of the service in same namespace
          servicePort: 8080
  - host: "v2.nwapp.104.248.99.27.nip.io"
    http:
      paths:
      - path: /
        backend:
          serviceName: nwappv2-svc # name of the service in same namespace
          servicePort: 8080
