workshop04/wordpress.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-deployment
  labels:
    app: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress-pod
  template:
    metadata:
      name: wordpress-pod
      labels:
        app: wordpress-pod
    spec:
      volumes:
        - name: wordpress-vol
          persistentVolumeClaim:
            claimName: wordpress-pvc
      containers:
      - name: wordpress
        image: library/wordpress
        imagePullPolicy: IfNotPresent
        ports:
        - name: wordpress-port
          containerPort: 80
        volumeMounts:
        - name: wordpress-vol #refer to line 38
          mountPath: /var/www/html
---
apiVersion: v1
kind: Service
metadata:
  name: wordpressdb-svc 
  labels:
    app: wordpress
spec:
  type: ClusterIP
  selector:
    app: wordpress-pod
  ports:
  - name: http-port
    port: 80
    targetPort: wordpress-port

#ingress
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: wordpressdb-ing
  labels:
    app: wordpress
  annotations: 
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/limit-rpm: "15"
spec:
  rules:
  - host: wordpress-157.230.193.208.nip.io
    http:
      paths: 
        - path: /
          backend: 
            serviceName: wordpressdb-svc
            servicePort: http-port # match line 80
